--- a/css/main.scss
+++ b/css/main.scss
@@ -2,25 +2,49 @@ body {
     scroll-snap-type: x mandatory;
     overflow-x: scroll;
     display: grid;
-    grid-template-columns: repeat(3, 100%);
+    grid-template-columns: repeat(6, 100%);
 }
 
 section {
-    padding: 7em;
-    height: calc(100vh - 14em);
-    width: calc(100% - 14em);
-    color: white;
+    padding: 2em;
+    height: calc(100vh - 4em);
+    width: calc(100% - 4em);
+    color: black;
     scroll-snap-align: start;
 
     &:nth-of-type(1) {
-        background: #A5AE9E
+        background: whitesmoke;
     }
 
-    &nth-of-type(2) {
-        background: #D0DDD7
+    &:nth-of-type(2) {
+        background: whitesmoke;
     }
 
-    &nth-of-type(3) {
-        background: #895B1E
+    &:nth-of-type(3) {
+        background: whitesmoke;
     }
+    &:nth-of-type(4) {
+        background: whitesmoke;
+    }
+    &:nth-of-type(5) {
+        background: whitesmoke;
+    }
+    &:nth-of-type(6) {
+        background: whitesmoke;
+    }
+    
+#javaSection{
+    display: flex;
+    flex-flow: row nowrap;
+}
+#javaSection div{
+    padding: .8em;
+}
+.example{
+    background-color: rgb(36, 36, 36);
+    color: white;
+    padding: 1em 1em;
+    font-family: monospace;
+    max-width: 32em;
+}
 }
