--- a/brain-me/css/styles.css
+++ b/brain-me/css/styles.css
@@ -28,8 +28,12 @@ h3 {
 }
 
 #myImage {
-    height: 40px;
+    height: 60px;
     width: auto;
+}
+
+#myImage :hover{
+    cursor: pointer;
 }
 
 .element {
@@ -43,6 +47,14 @@ h3 {
 }
 
 /*form*/
+#riskButton{
+    margin-top: 2em;
+}
+#riskAssessmentForm label{
+    display: block;
+    margin-top: 1em;
+    font-size: larger;
+}
 .content {
     position: relative;
     display: block;
@@ -99,21 +111,30 @@ h3 {
     font-size: 1rem;
     transition: 150ms border-color linear;
 }
+.twoColumns{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-bottom: 1.5em;
+    width: 200px;
+}
 
 /*Pre-Surgery Questionare*/
+.output{
+    float: right;
+}
 .slideContainer {
     width: 100%;
-    /* Width of the outside container */
 }
 
 /* The slider itself */
 .slider {
+    margin-top: 1em;
+    margin-bottom: 1em;
     -webkit-appearance: none;
     appearance: none;
     width: 100%;
     height: 15px;
     border-radius: 5px;
-
     background: #d3d3d3;
     /* Grey background */
     outline: none;
@@ -128,34 +149,28 @@ h3 {
 /* Mouse-over effects */
 .slider:hover {
     opacity: 1;
-    /* Fully shown on mouse-over */
+
 }
 
 /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
 .slider::-webkit-slider-thumb {
     -webkit-appearance: none;
-    /* Override default look */
     appearance: none;
     width: 25px;
-    /* Set a specific slider handle width */
     height: 25px;
     border-radius: 50%;
-    /* Slider handle height */
     background: #3CCED1;
     cursor: pointer;
-    /* Cursor on hover */
 
 }
 
 .slider::-moz-range-thumb {
     width: 25px;
-    /* Set a specific slider handle width */
     height: 25px;
     border-radius: 50%;
-    /* Slider handle height */
     background: #3CCED1;
     cursor: pointer;
-    /* Cursor on hover */
+
 }
 
 /*front Page with option of login or signup*/
@@ -193,4 +208,28 @@ h3 {
 }
 #appStart a:hover{
     color: black;
+}
+.delete{
+    float: right;
+    background-color: #3CCED1;
+    padding: 6px;
+    border-radius: 4px;
+    cursor: pointer;
+    color: white;
+    font-family: barlow;
+    text-transform: uppercase;
+}
+.delete:hover{
+    opacity: .6;
+}
+li{
+    margin: 3em;
+    max-width: 400px;
+    text-align: center;
+}
+.hideDeleteLi{
+    display: none;
+}
+.hide{
+    display: none;
 }
