--- a/css/styles.css
+++ b/css/styles.css
@@ -68,3 +68,14 @@ a:hover .comment {
     margin-left: auto;
     margin-right: auto;
 }
+#brainMeLink{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    background-color: #F4F3EF;
+    max-width: 450px;
+    height: 450px;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
