--- a/brain-me/css/styles.css
+++ b/brain-me/css/styles.css
@@ -254,6 +254,11 @@ fieldset img{
     15% {background-color: rgb(187, 187, 187);}
     100% {background-color: #F4F3EF;}
 }
+audio {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;  
+}
 #appStart a{
     display: block;
     width: 100px;
